src/objects/Review__c.object
<CustomObject>
    <description>用于记录服务请求的回访信息</description>
    <fields>
        <fullName>Customers__c</fullName>
        <formula>request__r.customer__r.Name</formula>
        <label>客户名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>回访结果（整体满意度）</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>非常满意</fullName>
                    <default>true</default>
                    <label>非常满意</label>
                </value>
                <value>
                    <fullName>满意</fullName>
                </value>
                <value>
                    <fullName>一般</fullName>
                </value>
                <value>
                    <fullName>不满意</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>服务工程师</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>解决问题的效率</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>非常满意</fullName>
                    <default>true</default>
                    <label>非常满意</label>
                </value>
                <value>
                    <fullName>满意</fullName>
                </value>
                <value>
                    <fullName>一般</fullName>
                </value>
                <value>
                    <fullName>不满意</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>回访日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_result__c</fullName>
        <label>客户反馈</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ServiceRequestType__c</fullName>
        <formula>request__r.RecordType.Name</formula>
        <label>服务请求类型</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_person__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>回访联系人</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>回访信息</relationshipLabel>
        <relationshipName>f1k</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>客户</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>回访信息</relationshipLabel>
        <relationshipName>pogF</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>服务请求</label>
        <referenceTo>servicerequest__c</referenceTo>
        <relationshipLabel>回访信息</relationshipLabel>
        <relationshipName>sYuZ</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>回访信息</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field2__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Review_result__c</columns>
        <columns>Field1__c</columns>
        <columns>Field5__c</columns>
        <columns>Field3__c</columns>
        <columns>Field4__c</columns>
        <columns>contact_person__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>{yyyy}-{0000}</displayFormat>
        <label>回访信息名称</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>回访信息</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>